POWR-3040 make sure narrow image is centered at small viewport sizes, remove left margin on align right images at small viewport size

--- a/web/themes/custom/cloudy2/src/sass/media/_embedded.scss
+++ b/web/themes/custom/cloudy2/src/sass/media/_embedded.scss
@@ -134,28 +134,27 @@ drupal-media[data-align=left] {
 @media (max-width: 559px) {
   .embed-image.embedded-narrow {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
+    margin-left: auto !important;
+    margin-right: auto !important;
     float: none;
+  }
+  figure.embedded-narrow .embedded-narrow {
+    width: 25% !important;
   }
   .embed-image.embedded-narrow img {
     width: 208px;
   }
   .caption.caption-drupal-media {
-    width: 100%;
+    width: 100% !important;
     float: none;
+    margin-left: 0;
   }
   .embedded-medium, .embedded-narrow {
     margin-right: 0;
     float: none;
-    width: 100% !important;
+    width: 25% !important;
     display: block;
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
-  figure.embedded-narrow, .embedded-narrow {
-    width: 25% !important;
-  }
-
 }
